# vercel-rust

./: .gitignore  Cargo.toml  package.json
src/: lib.rs  request.rs
test/fixtures/01-include-files/: vercel.json
test/fixtures/02-with-utility/: vercel.json
test/fixtures/03-with-function/: vercel.json
test/fixtures/04-with-parameter/: vercel.json
