[package]
authors = ["Vercel <support@vercel.com>"]
description = "Rust runtime for Vercel Functions."
documentation = "https://docs.rs/vercel_lambda"
edition = "2018"
homepage = "https://github.com/vercel-community/rust"
include = [
  "src/*.rs",
  "Cargo.toml",
]
keywords = ["Vercel", "Rust", "Serverless", "Functions"]
license = "MIT"
name = "vercel_lambda"
repository = "https://github.com/vercel-community/rust"
version = "0.2.0"

[dependencies]
base64 = "0.10"
http = "0.2"
http-serde = "1.1"
lambda_runtime = "0.2.0"
log = "^0.4"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
tokio = "^0.1"
